Pushing maria db

--- a/default/monica/configmap.yaml
+++ b/default/monica/configmap.yaml
@@ -4,3 +4,6 @@ metadata:
   name: monica-configmap
 data:
   APP_ENV: production
+  DB_HOST: monica-db-svc
+  DB_DATABASE: monica
+  DB_USERNAME: monica
