Pushing new mariadb secrets

--- a/default/mariadb/secrets.yaml
+++ b/default/mariadb/secrets.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
     name: monica-db-secrets
     namespace: default
-data:
+stringData:
     MYSQL_PASSWORD: ENC[AES256_GCM,data:9+bvL8DbKhQf,iv:2jSIRVOXn0e5w/WxOqPvoC0zRR66ug+p8hWx+W24tNA=,tag:cfrRID7V4pLMJtXircA2iw==,type:str]
     MYSQL_ROOT_PASSWORD: ENC[AES256_GCM,data:i1ipYpeNdA0WQRpe1sY=,iv:uJ3raoF7n1s0veQNgmO9nhtnu7WULGzzzN5Dgcf9HMQ=,tag:ribI1vUZGBtR5xpsCILgWA==,type:str]
 sops:
