--- a/flux-system/gotk-sync.yaml
+++ b/flux-system/gotk-sync.yaml
@@ -30,20 +30,20 @@ spec:
     provider: sops
     secretRef:
       name: sops-gpg
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
-kind: Kustomization
-metadata:
-  name: default-secrets
-  namespace: default
-spec:
-  interval: 5m
-  path: "./default"
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: default-secrets
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-pgp
+#---
+#apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+#kind: Kustomization
+#metadata:
+#  name: default-secrets
+#  namespace: default
+#spec:
+#  interval: 5m
+#  path: "./default"
+#  prune: true
+#  sourceRef:
+#    kind: GitRepository
+#    name: default-secrets
+#  decryption:
+#    provider: sops
+#    secretRef:
+#      name: sops-pgp
