--- a/default/monica/configmap.yaml
+++ b/default/monica/configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: monica-configmap
 data:
   APP_ENV: production
-  APP_FORCE_URL: true
+  APP_FORCE_URL: "true"
   DB_HOST: monica-db-svc
   DB_DATABASE: monica
   DB_USERNAME: monica
