--- a/longhorn-system/longhorn-helm-release.yaml
+++ b/longhorn-system/longhorn-helm-release.yaml
@@ -15,3 +15,8 @@ spec:
         name: longhorn-charts
         namespace: flux-system
       interval: 5m
+  values:
+    persistence:
+      defaultClassReplicaCount: 2
+    defaultSettings:
+      defaultReplicaCount: 2
