--- a/default/monica/configmap.yaml
+++ b/default/monica/configmap.yaml
@@ -4,6 +4,7 @@ metadata:
   name: monica-configmap
 data:
   APP_ENV: development
+  APP_DISABLE_LOGIN: true
   DB_HOST: monica-db-svc.default
   DB_DATABASE: monica
   DB_USERNAME: monica
