--- a/monitoring/kube-prometheus-stack/kube-prometheus-stack-release.yaml
+++ b/monitoring/kube-prometheus-stack/kube-prometheus-stack-release.yaml
@@ -74,15 +74,15 @@ spec:
     kubeEtcd:
       enabled: false
     kubeControllerManager:
-      enabled: true
+      enabled: false
       # endpoints:
       # - 10.2.0.30
     kubeScheduler:
-      enabled: true
+      enabled: false
       # endpoints:
       # - 10.2.0.30
     kubeProxy:
-      enabled: true
+      enabled: false
     #    prometheus-node-exporter:
     #      tolerations:
     #        - key: "arm"
@@ -108,6 +108,8 @@ spec:
         # image:
         #   repository: quay.io/prometheus/prometheus
         #   tag: v2.20.0
+        scrapeInterval: 15s
+        evaluationInterval: 15s
         retention: 2d
         enableAdminAPI: true
         walCompression: true
