fix wrong chart name for vpa

--- a/kube-system/vpa/vpa-helm-release.yaml
+++ b/kube-system/vpa/vpa-helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: fairwinds-stable/vpa
+      chart: vpa
       version: 0.3.3
       sourceRef:
         kind: HelmRepository
