--- a/kube-system/vpa/vpa-helm-release.yaml
+++ b/kube-system/vpa/vpa-helm-release.yaml
@@ -1,23 +1,18 @@
-#---
-## https://github.com/FairwindsOps/charts/tree/master/stable/vpa
-#apiVersion: helm.toolkit.fluxcd.io/v2beta1
-#kind: HelmRelease
-#metadata:
-#  name: vpa
-#  namespace: kube-system
-#spec:
-#  interval: 5m
-#  chart:
-#    spec:
-#      chart: vpa
-#      version: 0.3.3
-#      sourceRef:
-#        kind: HelmRepository
-#        name: fairwind-charts
-#        namespace: flux-system
-#      interval: 5m
-#  values:
-#    persistence:
-#      defaultClassReplicaCount: 2
-#    defaultSettings:
-#      defaultReplicaCount: 2
+---
+# https://github.com/FairwindsOps/charts/tree/master/stable/vpa
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: vpa
+  namespace: kube-system
+spec:
+  interval: 5m
+  chart:
+    spec:
+      chart: vpa
+      version: 0.3.3
+      sourceRef:
+        kind: HelmRepository
+        name: fairwind-charts
+        namespace: flux-system
+      interval: 5m
