change grafana datasource scrape interval to 15s

--- a/monitoring/kube-prometheus-stack/kube-prometheus-stack-release.yaml
+++ b/monitoring/kube-prometheus-stack/kube-prometheus-stack-release.yaml
@@ -69,8 +69,10 @@ spec:
     #       sourceLabels:
     #       - node
     #       targetLabel: instance
-    #    grafana:
-    #      enabled: false
+    grafana:
+      sidecar:
+        datasources:
+          defaultDatasourceScrapeInterval: 15s
     kubeEtcd:
       enabled: false
     kubeControllerManager:
