--- a/flux-system/gotk-sync.yaml
+++ b/flux-system/gotk-sync.yaml
@@ -36,7 +36,7 @@ spec:
   postBuild:
     substitute: { }
     substituteFrom:
-      - kind: ConfigMap
-        name: cluster-settings
+#      - kind: ConfigMap
+#        name: cluster-settings
       - kind: Secret
         name: cluster-secrets
