--- a/flux-system/gotk-sync.yaml
+++ b/flux-system/gotk-sync.yaml
@@ -33,10 +33,10 @@ spec:
     provider: sops
     secretRef:
       name: sops-gpg
-  postBuild:
-    substitute: { }
-    substituteFrom:
-#      - kind: ConfigMap
-#        name: cluster-settings
-      - kind: Secret
-        name: cluster-secrets
+#  postBuild:
+#    substitute: { }
+#    substituteFrom:
+##      - kind: ConfigMap
+##        name: cluster-settings
+#      - kind: Secret
+#        name: cluster-secrets
