remove cluster secrets

--- a/flux-system/gotk-sync.yaml
+++ b/flux-system/gotk-sync.yaml
@@ -30,8 +30,8 @@ spec:
     provider: sops
     secretRef:
       name: sops-gpg
-  postBuild:
-    substitute: { }
-    substituteFrom:
-      - kind: Secret
-        name: cluster-secrets
+#  postBuild:
+#    substitute: { }
+#    substituteFrom:
+#      - kind: Secret
+#        name: cluster-secrets
