--- a/default/mariadb/pvc.yaml
+++ b/default/mariadb/pvc.yaml
@@ -1,11 +1,11 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mariadb-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: longhorn
-  resources:
-    requests:
-      storage: 300Mi
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  name: mariadb-pvc
+#spec:
+#  accessModes:
+#    - ReadWriteOnce
+#  storageClassName: longhorn
+#  resources:
+#    requests:
+#      storage: 300Mi
