--- a/default/monica/deployment.yaml
+++ b/default/monica/deployment.yaml
@@ -1,45 +1,45 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: monica-deployment
-  namespace: default
-  labels:
-    app: monica
-spec:
-  replicas: 1
-  strategy:
-    type: Recreate
-  selector:
-    matchLabels:
-      app: monica
-  template:
-    metadata:
-      labels:
-        app: monica
-    spec:
-      volumes:
-        - name: monica-volume
-          persistentVolumeClaim:
-            claimName: monica-pvc
-      containers:
-        - name: monica
-          image: monica:3.0.1-apache
-          imagePullPolicy: IfNotPresent
-          ports:
-            - containerPort: 80
-          env:
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: monica-db-secrets
-                  key: MYSQL_PASSWORD
-          envFrom:
-            - configMapRef:
-                name: monica-configmap
-            - secretRef:
-                name: monica-secrets
-          volumeMounts:
-            - mountPath: "/var/www/html/storage"
-              name: monica-volume
-
-
+#apiVersion: apps/v1
+#kind: Deployment
+#metadata:
+#  name: monica-deployment
+#  namespace: default
+#  labels:
+#    app: monica
+#spec:
+#  replicas: 1
+#  strategy:
+#    type: Recreate
+#  selector:
+#    matchLabels:
+#      app: monica
+#  template:
+#    metadata:
+#      labels:
+#        app: monica
+#    spec:
+#      volumes:
+#        - name: monica-volume
+#          persistentVolumeClaim:
+#            claimName: monica-pvc
+#      containers:
+#        - name: monica
+#          image: monica:3.0.1-apache
+#          imagePullPolicy: IfNotPresent
+#          ports:
+#            - containerPort: 80
+#          env:
+#            - name: DB_PASSWORD
+#              valueFrom:
+#                secretKeyRef:
+#                  name: monica-db-secrets
+#                  key: MYSQL_PASSWORD
+#          envFrom:
+#            - configMapRef:
+#                name: monica-configmap
+#            - secretRef:
+#                name: monica-secrets
+#          volumeMounts:
+#            - mountPath: "/var/www/html/storage"
+#              name: monica-volume
+#
+#
