--- a/default/monica/svc.yaml
+++ b/default/monica/svc.yaml
@@ -1,12 +1,12 @@
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: monica-svc
-  namespace: default
-spec:
-  type: ClusterIP
-  selector:
-    app: monica
-  ports:
-    - port: 80
+#---
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: monica-svc
+#  namespace: default
+#spec:
+#  type: ClusterIP
+#  selector:
+#    app: monica
+#  ports:
+#    - port: 80
