--- a/cluster/base/apps.yaml
+++ b/cluster/base/apps.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 10m0s
   dependsOn:
-    - name: core
+    - name: crds
   path: ./cluster/apps
   prune: true
   sourceRef:
@@ -17,10 +17,10 @@ spec:
     provider: sops
     secretRef:
       name: sops-gpg
-#  postBuild:
-#    substitute: { }
-#    substituteFrom:
-##      - kind: ConfigMap
-##        name: cluster-settings
-#      - kind: Secret
-#        name: cluster-secrets
+  postBuild:
+    substitute: { }
+    substituteFrom:
+#      - kind: ConfigMap
+#        name: cluster-settings
+      - kind: Secret
+        name: cluster-secrets
