re-encrypt cluster-secrets

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -4,33 +4,33 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:AP6WJlGeSnvlqA==,iv:+lzWIYpTK55vrajenJ0fVa0F+DbLL2PCLiTXzzKYyOw=,tag:idrxdYOFd3rVoEQRlRblEw==,type:str]
-    SECRET_EMAIL: ENC[AES256_GCM,data:mcYPfa6y7Njabt1CVeFIJCmqFCQ=,iv:nBoErQ25efpHyck9KqIet907WZOcsgPPhxGpo4eftLs=,tag:2efs/2+yhvcys8xIJCo0OQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:azD6SwK03GoSJQ==,iv:BNwD0p/s2Ch2DNPjCpWnte7kgwwGvH2slvjVhAbdHCI=,tag:P35y1krm+pxY4k0sHMFC8g==,type:str]
+    SECRET_EMAIL: ENC[AES256_GCM,data:DuIwqXckxNgJK6wI0A/Bh5y4Cmk=,iv:Yna2t20DvfDlJNIgNVlQPy4GViuOj3zW3AzthCcbZOc=,tag:eAt8vu5DnTEeXgpBYJEWfQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-05-27T20:19:10Z"
-    mac: ENC[AES256_GCM,data:3q5p1KDE9H8S+fTRK44N826rvm+HpJhfuvanSBctpnQeG5PA4vuG3vhfX12ydXBQ0VqQkxONsJYphj2htUikMCk4F1fzGvB0ap+voFo1Y1TUuD5U0+03S3TqWFRT37OVT75kIxUVNqIhsJs7Yw0xGSvDHJTjCkwV4U5AyBecu9A=,iv:K4iNaKoQ65gQeaQe1R8D+RdYwYltefybYHYdPW3AbYU=,tag:Mhofm10QKBQkpbFNJOatTg==,type:str]
+    lastmodified: "2021-05-28T11:19:50Z"
+    mac: ENC[AES256_GCM,data:kUDpYvMISPzOTXxKSO80sHidFtkxV5tCnIIS4CaOrYpNYw8T0zhIsWQyI9yw32ovQAzUsPxJ3k9uNhrFPmV9FzNztRJP8XHbZsdLde2L3DCGXzSexxwDdXu4omJaDRZHyIJ+Hi/GxiL//WtLo5Fqakcxh5IOjzWMOLTvw9G1FLc=,iv:iUlSLwPcvU6/Exnc5stJMhpmySus2FCWjlQaoIyfz6w=,tag:hYCLxeUYnViEEq86aK50ug==,type:str]
     pgp:
-        - created_at: "2021-05-27T20:19:10Z"
+        - created_at: "2021-05-28T11:19:49Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv8CW8hHDS3FPH9J+BSIpW/NcE/SGe2h3ohtKtjHJwrPcP1
-            Vmuh8qw4CjSgllhmnAxYCBCatoMVn47TVdypWx4Q7jL8EREOvKQ31MvvcpyTpqTd
-            tMflKxlU66xFDY4OQZ0cHg1gHmOvrK4wqvrmfd8qE9gqhgqZbDPPo0vCoNHxOy9D
-            FuA6gNHBCaymCLEkJ6KCiETlnsACOJln9NoHgslUpGkblpoSp2KVTluAu/+kmawH
-            y/Ztl5RexBgAHHASCAbygY6vZB2bzPOwUEZ4NrAf6kBcKrbqzXu9Li//Lh70b/y1
-            iKWTCS8QcUVsa1kUH6NaONGB8YZXblBW28CLrMAXKE9a/PukRWfx9FRIgM5GreBH
-            +mUs5ZN4ZkM4UciPGLmISNzo0sJMz9I/Qg/Kijglj3MhpwuVlzOSlNHDsInywryB
-            snET3NFeZ28gkdJstBtxhcyliWrCQiC9XVSdy6phs8R6Mt7Jg8Yrqjg4IUHUwfC8
-            IV+qVmEwz/aXz37Oj4vi0lwBlIO0+EhU4pronizERTtj5n4vdFfgEf6gE9RPqyIO
-            pUG4naLDvtcjmIeUSyRBpVY0FCqce+lja4cGXi6A7EJZd4Yt8XsAY19359Ky/gYh
-            MhGNVwWzR9jQ9V1QLQ==
-            =cs4T
+            hQGMA71EESEn7N2iAQv/Q0cVnqJVfYFDIPmLu0CIxyc/Dkc+gZfyCipch1a38CK+
+            Ck+adR3cR8AgCv6GNRQ5fIeKLXdfJ5Ufr/qPoeSHLYHZ5AoRoPFlf/iSWJdYKz26
+            cvYrPQiRkFTbsvSOaD+Z7c4XZuR91lONj45JV5bAy2kJeQrDtGN24HtD7+IY3rd9
+            lEgVgs4YAyhtk2uKupS1YwyII6YGNAebO11MfYVDXzz2fdEuzJagloMRqB/WLj+E
+            tmYIXf92Uezw8Gf5LqlbZw5GQWMD4Ko+kBl3xCc394MUJOlcRSfWO0unHvnFJJil
+            ub/Y1lLz7JN0yFDQrN9YVmOP85sBD2JaFieqvlxqRwwBlMG7LoL75m10mZAIYHpe
+            oXIgL/49LEdkmuD6PL3EJtkYr2PPtdBlZvZIBrLQ3G0xb9x/Vd4W4DMckUBtloKc
+            a6iJJGgP3JntHCqFQ+iiiHlu4/DwKiGkF5wTxrzCvQ2CYyoCqLE2v+KFgaMdO9nb
+            1BgJrsb3cCWgQrenJdsX0l4BRkf+7baZKB5C01quYt0N+ihZz8aQfD/ScfxJ3Yp0
+            cvmV60PoAcTlP8tw0fjeuvv97v9ssC6KWT0+izDZkv4lTl0updQJQfRTyWkcYEGC
+            yWRbLSGKsW7qvNkzK4is
+            =V0y9
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
