--- a/cluster/apps/vpn/wireguard/deployment.yaml
+++ b/cluster/apps/vpn/wireguard/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: wg-deployment
-  namespace: default
+  namespace: vpn
   labels:
     app: wireguard
 spec:
