--- a/cluster/apps/vpn/wireguard/svc.yaml
+++ b/cluster/apps/vpn/wireguard/svc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: wg-svc
-  namespace: default
+  namespace: vpn
 spec:
   type: ClusterIP
   selector:
