--- a/cluster/apps/vpn/wstunnel/deployment.yaml
+++ b/cluster/apps/vpn/wstunnel/deployment.yaml
@@ -23,10 +23,10 @@ spec:
         - name: wstunnel
           image: shadyf/wstunnel:latest
           imagePullPolicy: IfNotPresent
-          args:
-            - "--server"
-            - "ws://0.0.0.0:8084"
-            - "-r"
-            - "127.0.0.1:995"
+#          args:
+#            - "--server"
+#            - "ws://0.0.0.0:8084"
+#            - "-r"
+#            - "127.0.0.1:995"
           ports:
             - containerPort: 8084
