chore: made wstunnel never restart

--- a/cluster/apps/vpn/wstunnel/deployment.yaml
+++ b/cluster/apps/vpn/wstunnel/deployment.yaml
@@ -17,6 +17,7 @@ spec:
       labels:
         app: wstunnel
     spec:
+      restartPolicy: Never
       imagePullSecrets:
         - name: regcred
       containers:
