--- a/cluster/apps/vpn/wstunnel/deployment.yaml
+++ b/cluster/apps/vpn/wstunnel/deployment.yaml
@@ -23,7 +23,7 @@ spec:
         - name: wstunnel
           image: shadyf/wstunnel:latest
           imagePullPolicy: IfNotPresent
-          command: ["sh"]
-#          args: [ "--server", "ws://0.0.0.0:8084", "-r", "127.0.0.1:995" ]
+          command: ['sh -c "sleep 500"']
+#          args: [ "-c", "ws://0.0.0.0:8084", "-r", "127.0.0.1:995" ]
           ports:
             - containerPort: 8084
