--- a/cluster/apps/vpn/wstunnel/ingress.yaml
+++ b/cluster/apps/vpn/wstunnel/ingress.yaml
@@ -1,24 +1,26 @@
-#apiVersion: extensions/v1beta1
-#kind: Ingress
-#metadata:
-#  name: wstunnel-ingress
-#  annotations:
-#    kubernetes.io/ingress.class: "nginx"
-#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-#    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
-#    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
-#    nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
-#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
-#spec:
-#  tls:
-#    - hosts:
-#        - ws.erebe.eu
-#      secretName: wstunnel-tls
-#  rules:
-#    - host: ws.erebe.eu
-#      http:
-#        paths:
-#          - path: /
-#            backend:
-#              serviceName: wstunnel
-#              servicePort: http
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: wstunnel-ingress
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+    nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
+spec:
+  tls:
+    - hosts:
+        - "home.${SECRET_DOMAIN}"
+      secretName: wstunnel-tls
+  rules:
+    - host: "home.${SECRET_DOMAIN}"
+      http:
+        paths:
+          - path: /
+            backend:
+              service:
+                name: wstunnel-svc
+                port:
+                  number: 80
