fix: add missing pathType in wstunnel ingress

--- a/cluster/apps/vpn/wstunnel/ingress.yaml
+++ b/cluster/apps/vpn/wstunnel/ingress.yaml
@@ -18,7 +18,8 @@ spec:
     - host: "home.${SECRET_DOMAIN}"
       http:
         paths:
-          - path: /
+          - pathType: Prefix
+            path: /
             backend:
               service:
                 name: wstunnel-svc
