--- a/cluster/apps/cert-manager/cert-manager/cert-manager-letsencrypt.yaml
+++ b/cluster/apps/cert-manager/cert-manager/cert-manager-letsencrypt.yaml
@@ -12,9 +12,7 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-staging
     solvers:
-      - http01:
-          ingress:
-            class: nginx
+      - http01: {}
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
@@ -27,6 +25,4 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-production
     solvers:
-      - http01:
-          ingress:
-            class: nginx
+      - http01: {}
