--- a/cluster/apps/vpn/wstunnel/ingress.yaml
+++ b/cluster/apps/vpn/wstunnel/ingress.yaml
@@ -9,6 +9,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
     nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
     cert-manager.io/cluster-issuer: "letsencrypt-production"
+    certmanager.k8s.io/acme-challenge-type: http01
 spec:
   tls:
     - hosts:
