fix: fix for ingress not being in vpn namespace

--- a/cluster/apps/cert-manager/cert-manager/cert-manager-letsencrypt.yaml
+++ b/cluster/apps/cert-manager/cert-manager/cert-manager-letsencrypt.yaml
@@ -12,7 +12,9 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-staging
     solvers:
-      - http01: {}
+      - http01:
+          ingress:
+            class: nginx
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
@@ -25,4 +27,6 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-production
     solvers:
-      - http01: {}
+      - http01:
+          ingress:
+            class: nginx
