--- a/cluster/apps/networking/metallb/metallb-helm-release.yaml
+++ b/cluster/apps/networking/metallb/metallb-helm-release.yaml
@@ -34,3 +34,24 @@ spec:
           # CIDR prefix, or an explicit start-end range of IPs.
           addresses:
             - 192.168.1.240-192.168.1.249
+    # Change controller image from bitnami/metallb-controller to metallb/controller (bitnami image doesn't support ARM)
+    controller:
+      image:
+        registry: docker.io
+        repository: metallb/controller
+        tag: v0.9.6
+#      tolerations:
+#        - key: "arm"
+#          operator: "Exists"
+    speaker:
+      image:
+        registry: docker.io
+        repository: metallb/speaker
+        tag: v0.9.6
+#      tolerations:
+#        - key: "arm"
+#          operator: "Exists"
+#        - key: "armhf"
+#          operator: "Exists"
+#        - key: "node-role.kubernetes.io/master"
+#          operator: "Exists"
