--- a/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
+++ b/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -22,4 +21,6 @@ spec:
         type: LoadBalancer
         loadBalancerIP: 192.168.1.240
         # See https://docs.microsoft.com/en-us/azure/aks/concepts-network#client-source-ip-preservation
-        externalTrafficPolicy: Local
+        # Also see https://metallb.universe.tf/usage/#traffic-policies for what happens when used
+        # in conjuction with MetalLB
+        externalTrafficPolicy: Cluster
