chore: change wireguard serverurl to 127.0.0.1

--- a/cluster/apps/vpn/wireguard/deployment.yaml
+++ b/cluster/apps/vpn/wireguard/deployment.yaml
@@ -36,6 +36,8 @@ spec:
             - protocol: UDP
               containerPort: 51820
           env:
+            - name: SERVERURL
+              value: 127.0.0.1
             - name: TZ
               value: Africa/Cairo
             - name: SERVERPORT
