--- a/cluster/apps/vpn/wstunnel/ingress.yaml
+++ b/cluster/apps/vpn/wstunnel/ingress.yaml
@@ -5,16 +5,16 @@ metadata:
   namespace: vpn
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
     nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
-#    cert-manager.io/cluster-issuer: "letsencrypt-staging"
+    cert-manager.io/cluster-issuer: "letsencrypt-staging"
 spec:
-#  tls:
-#    - hosts:
-#        - "home.${SECRET_DOMAIN}"
-#      secretName: wstunnel-tls
+  tls:
+    - hosts:
+        - "home.${SECRET_DOMAIN}"
+      secretName: wstunnel-tls
   rules:
     - host: "home.${SECRET_DOMAIN}"
       http:
