--- a/cluster/apps/cert-manager/cert-manager/cert-manager-letsencrypt.yaml
+++ b/cluster/apps/cert-manager/cert-manager/cert-manager-letsencrypt.yaml
@@ -1,38 +1,36 @@
-## This manifest will give a kustomization error if the cert-manager crds are not intalled before hand
-## Comment this file first, install the crds, then uncomment it
-#---
-#apiVersion: cert-manager.io/v1
-#kind: ClusterIssuer
-#metadata:
-#  name: letsencrypt-staging
-#spec:
-#  acme:
-#    server: https://acme-staging-v02.api.letsencrypt.org/directory
-#    email: "${SECRET_EMAIL}"
-#    privateKeySecretRef:
-#      name: letsencrypt-staging
-#    solvers:
-#      - dns01:
-#          cloudflare:
-#            email: "${SECRET_EMAIL}"
-#            apiTokenSecretRef:
-#              name: cloudflare-token-secret
-#              key: cloudflare-token
-#---
-#apiVersion: cert-manager.io/v1
-#kind: ClusterIssuer
-#metadata:
-#  name: letsencrypt-production
-#spec:
-#  acme:
-#    server: https://acme-v02.api.letsencrypt.org/directory
-#    email: "${SECRET_EMAIL}"
-#    privateKeySecretRef:
-#      name: letsencrypt-production
-#    solvers:
-#      - dns01:
-#          cloudflare:
-#            email: "${SECRET_EMAIL}"
-#            apiTokenSecretRef:
-#              name: cloudflare-token-secret
-#              key: cloudflare-token
+# This manifest will give a kustomization error if the cert-manager crds are not intalled before hand
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-staging
+spec:
+  acme:
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    email: "${SECRET_EMAIL}"
+    privateKeySecretRef:
+      name: letsencrypt-staging
+    solvers:
+      - dns01:
+          cloudflare:
+            email: "${SECRET_EMAIL}"
+            apiTokenSecretRef:
+              name: cloudflare-token-secret
+              key: cloudflare-token
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-production
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory
+    email: "${SECRET_EMAIL}"
+    privateKeySecretRef:
+      name: letsencrypt-production
+    solvers:
+      - dns01:
+          cloudflare:
+            email: "${SECRET_EMAIL}"
+            apiTokenSecretRef:
+              name: cloudflare-token-secret
+              key: cloudflare-token
