--- a/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
+++ b/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
@@ -25,3 +25,6 @@ spec:
       host: "longhorn.${SECRET_DOMAIN}"
       tls: true
       tlsSecret: longhorn-tls
+      annotations:
+        kubernetes.io/ingress.class: "nginx"
+        cert-manager.io/cluster-issuer: "letsencrypt-production"
