fix: add connection-proxy-header to longhorn ingress in hopes of fixing ws

--- a/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
+++ b/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
@@ -27,4 +27,5 @@ spec:
       tlsSecret: longhorn-tls
       annotations:
         kubernetes.io/ingress.class: "nginx"
+        nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
         cert-manager.io/cluster-issuer: "letsencrypt-production"
