wip: remove cookieSecret from oauth2-proxy

--- a/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
+++ b/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
@@ -27,7 +27,7 @@ spec:
     config:
       clientID: "${SECRET_OAUTH2_CLIENT_ID}"
       clientSecret: "${SECRET_OAUTH2_CLIENT_SECRET}"
-      cookieSecret: "${SECRET_OAUTH2_COOKIE_SECRET}"
+#      cookieSecret: "${SECRET_OAUTH2_COOKIE_SECRET}"
     extraArgs:
       provider: oidc
       oidc-issuer-url: "https://${SECRET_OAUTH2_DOMAIN}/"
