--- a/cluster/apps/networking/oauth2-proxy/secret.enc.yaml
+++ b/cluster/apps/networking/oauth2-proxy/secret.enc.yaml
@@ -4,35 +4,35 @@ metadata:
     name: cluster-secrets
     namespace: networking
 stringData:
-    SECRET_OAUTH2_DOMAIN: ENC[AES256_GCM,data:uQoikwEZJYcYJ7rEyYv3fp/OKg==,iv:kh2dywxks9YjF8x72x99dOK6dmuPferci+PcVUiTXzU=,tag:lL7BDAIC0k2LKe/jn50VDQ==,type:str]
-    SECRET_OAUTH2_CLIENT_ID: ENC[AES256_GCM,data:caBKsPujiGI4ISNdl7syHEfEmZGrYP5gevJh1Al8F2s=,iv:BtSzIngyN4mBj5DWInjyUZeIIcYFb2CXpROTDgrhLV8=,tag:L/CTwEVRtKi+cEqQxsHX/w==,type:str]
-    SECRET_OAUTH2_CLIENT_SECRET: ENC[AES256_GCM,data:IJFnXtSHmA6ZU0E+ZM2C3tje8dqp+xBeXlU5mrr974IW7PuVN1XQw7u2PNCnUQmpPxpmMJB3eyv42GHxXWZDjQ==,iv:Ef+bktOauE7kJH3caM465+3JyqFxkTCl2M96i1/7JIM=,tag:Ume7FBlhDO6eh9eGA2Wzyw==,type:str]
-    SECRET_OAUTH2_COOKIE_SECRET: ENC[AES256_GCM,data:L+QC037Z4z6VT9XLcfT3+SI3AWr7UOa22N2zIZ4Iaz4QeBMNC9Tkfm9cV5s=,iv:BD8tjPfAoetMV1J6g0xEuzcZMnybHTNEIWYKUxA8MEw=,tag:vBck3cv2fb+yn7kthtCy1Q==,type:str]
+    SECRET_OAUTH2_DOMAIN: ENC[AES256_GCM,data:Z/Odze0h0glfqC30fCDshy10Xw==,iv:uQ9ZIZrA1cS8CvwZ8qW+cBTACd5Jk4aJAppS2Ktybi4=,tag:sBZkW2JkMcZh46qVfkkV+g==,type:str]
+    SECRET_OAUTH2_CLIENT_ID: ENC[AES256_GCM,data:+dEcCLbZq6qodNQnyay7WXdkGcAYLruYadDr2UywNiQ=,iv:0wPfqN+kdpReWd6nN2eos9mo74neM0nx/HIkpwj5LOA=,tag:0IpQQ89qv598JIvYwMsQrw==,type:str]
+    SECRET_OAUTH2_CLIENT_SECRET: ENC[AES256_GCM,data:WdadxMe7RFUwKAx2NvNCA6iW7POnh8FBT7V/Ptk7y+rqZw+dbt1A6sDNdDuaZJ7GLaLVBHC3zZ24PofSDxYhwuJ4BSzz3OTwogaUs9MXhDknQbtprzzSKw==,iv:atRyEXwRFD25iFncFS0Qjcl8bT+bbfBPx6Szof45aqM=,tag:fz8mZlnf/ZZgcugq2AUfhA==,type:str]
+    SECRET_OAUTH2_COOKIE_SECRET: ENC[AES256_GCM,data:KGncghX/7TNzEAjWghk1x9hSmY4NrZ9zuG2sOCj8PYwXBgbSl5BhvTtJWBQ=,iv:3RCjK/nPlGoeGRqnO9/ihf4Mf2IDVUg7vNnLoWfht9Q=,tag:Bu/T+u2RJB6Rl1W5+kF6wg==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-06-11T16:19:30Z"
-    mac: ENC[AES256_GCM,data:K5nDtqdjuOKBBq7Oioki96Ble1LoslaFg25WmMzvknYnlt6xJqh5rKu5DqYZrlyOHwhJyvGKAS25WojTCRPUu0TRYumqOLaFoCcgDrpiI93Ow/YMrGl1Ucn27FTs+KNAn7K5InJG+kBHN3+aPnb19EioLwfRAxsKRT8aRCKkYAs=,iv:Ei+LCO4q8faw1PQEbvtyedmjIXB0o9nyfF4PqDp377k=,tag:iPLyXUiXKAkBTgO6q7mhIw==,type:str]
+    lastmodified: "2021-06-11T16:54:49Z"
+    mac: ENC[AES256_GCM,data:PlzJlILena2/ZVu8LgcB57dhIAJTkGOusK66kvYWazrlFVkdsoC1U49JR5a0ZH8558YuRTEo2TDZth5XDbzT1NuoTompsZ8gOxztTumrQS5kwMdrHp7MMu5hfSKa0VHXB87/a8jvPVPU/EhPp64J/6HMTp8iwOSMWUOjD/TBqzY=,iv:NaqEOmKed02tmatGBL9N/agyu1MunZiyUlhNQVx7tSo=,tag:ofIV8dJAPSJpA3E/9eCkMg==,type:str]
     pgp:
-        - created_at: "2021-06-11T16:19:30Z"
+        - created_at: "2021-06-11T16:54:48Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQwAion/1msEuXnlMPjrPoRMwSWiH8+2tiX5qPOqG984HOaa
-            ZY0rZOfyUHOgF92jyeNRbW1p3++tqUtSe58vV6EC2YPPa2cr6JtCfDTgmjRJAhGc
-            SGZD+XoI5Qs3ARZF+JrnryU/nCVkDDKKNJvLCvr9usHyItIcJtR4/wS1zT5L180n
-            kidafT9sCtHfWZGb1y2+vhI2CGlTT6jyRR5rdGZvpxG0B7iMgLzFL7TcdzyqS4Pk
-            8EVenM8qC+eFMdOU3GFdIsjaeQpSg7u87QLChYSSqnS5TOAdqmJGIDDVeSYh9POE
-            BxLV8oh0Ho8LYwGAMYXp4V6QfzrQs8Nxehv0lFvEf4lUn/3939z/C+UquJ8Emghl
-            GKqZg2z7sze1QPUzv96tKHqXsQtfQ3va1wKUh1pwFY78D26vK8tq9m8Pb032ktzj
-            JHGgNH5MR9vjm0mMqW7t6+DJ2WJy2VwnrxNjB4OgB1xc91us7uIxBX02gsvSWC0K
-            ifNwDCHhdfzGV5SidmwQ0l4BNogpJJWmB/zXpYBah0FsSW0Y0mVxtz1HjgNCtWh3
-            XdJUbhJsloXV0z0DDOh9FYC/Ksa1kwE6LQ3AnOBBbjy4XnVoOrh5Zb5427G9eyl6
-            leg9JnR2CjR6iJBxzXmM
-            =vXF0
+            hQGMA71EESEn7N2iAQv+IoKZkwwQY7dImj5O62jSC5mvs0HyBOwnUtCcrRCFFN9G
+            WgeKqcEbUebBrtUdJL1zwAnk6DIfetFmT0VW3SjhmDqoXosTpJ0xopLofuKqNYW5
+            Lq9uy9O1t6oknZdf5T9W9flxaXOhC26ouQkhMFv9MnyK/U6wnnvj67BXnoOpyukM
+            bAe1seyPexw/CKaWEZjhUnK/IpF2keTFLBdlQo/i0tYND4/8AAakiqddr86KsPgo
+            jIz0qgcDBVXlCROkw3XmNIh4heciUb+zzUI3NKfoq6ShLkp5OjIWBEO5CxK14OJI
+            GXh8pbbqEx/nUoJHAfKy9VvvzRo+6wXTrJ6KP1QVzlzEQMSVQfZSRjKkLttylJgh
+            g722D0d8UOJKdSw/pLH48mM6D4izZNXIzpTDYASyygU19lvVCh/zG+NDAxavtXwX
+            qnvPJCLQUjsX6z+8etn1jtlJh/d06T1mOPQAetdV6o0al85wEn6CV9gy7G9YHiO0
+            EqIFs5KEIaJrHX2m+lcE0l4BC2gPet/yYVotQl/ya9XJyVQUSINZm99eH8N0CZ/d
+            AJ6tq5MkSAygB1DvMl5VxK50zRkBx5a+OdfDRJiR+CQKMXYU9PdAMT5pRuE811t9
+            3BInk1iHDy+ZJcVMKZnt
+            =mrJ/
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
