--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -4,33 +4,37 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:azD6SwK03GoSJQ==,iv:BNwD0p/s2Ch2DNPjCpWnte7kgwwGvH2slvjVhAbdHCI=,tag:P35y1krm+pxY4k0sHMFC8g==,type:str]
-    SECRET_EMAIL: ENC[AES256_GCM,data:DuIwqXckxNgJK6wI0A/Bh5y4Cmk=,iv:Yna2t20DvfDlJNIgNVlQPy4GViuOj3zW3AzthCcbZOc=,tag:eAt8vu5DnTEeXgpBYJEWfQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:3r8mpQ1/qsh28A==,iv:iW4h9KbQL3p7eGIk404OBS5D1sX/REvnRB0dFhtQjgo=,tag:FMHZABOYMI65GN7JVqnWdA==,type:str]
+    SECRET_EMAIL: ENC[AES256_GCM,data:XlCJcG2OIQvfIZZcIVt9bCmG8as=,iv:76EpdBqLF7NkiQ1B6j3/AjvhK8VBoFe30U7Bm9jRkno=,tag:y23t1I74HhSSIS7EW2Z1OQ==,type:str]
+    SECRET_AUTH0_DOMAIN: ENC[AES256_GCM,data:3owt2UerFYzQ4m2Vjp2alr9LCw==,iv:+Bqe4Q3k8POI+eiKihBRoeWqPzu5CRCTgfCNA768U5U=,tag:2WjIga9BO4Qq6cQdq32nrw==,type:str]
+    SECRET_AUTH0_CLIENT_ID: ENC[AES256_GCM,data:x5BoSgCYzDVlS8qPs2sKVs45WstcCj1kPGgPnuObW5E=,iv:bDuNjP1MCU9wl8X4UlFyh7QarR+kUs6MVPaaNDA99kE=,tag:BCJgUm1ODLDMOEfDI8M28g==,type:str]
+    SECRET_AUTH0_CLIENT_SECRET: ENC[AES256_GCM,data:p6GlsEH0ZcodLYL3Q3TCXeULmjzIQ8eIHvFbCu90Bb3s8REzwOKYsfCLrsk3gHapmarEZgtRPjZJv4X02OVQHA==,iv:w505FDA801XOTC4Nx3Ygq7pHEPU+CY+x+wKWJ1XHSsw=,tag:sYt5HOwEYzTh4DoZ2UbVqw==,type:str]
+    SECRET_OAUTH2_COOKIE_SECRET: ENC[AES256_GCM,data:xjnwrpd6xi6WjClbzn9LRXPvhPoXA7Xrk5f0YYnMfW1fXZmmsS6DVpIwRec=,iv:by4DYz7fDZOoX18uzz8KTKPaPuQjT+FtB2mubJ3nSy8=,tag:RcFnvRtgOj2QHW8ud0N7cw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-05-28T11:19:50Z"
-    mac: ENC[AES256_GCM,data:kUDpYvMISPzOTXxKSO80sHidFtkxV5tCnIIS4CaOrYpNYw8T0zhIsWQyI9yw32ovQAzUsPxJ3k9uNhrFPmV9FzNztRJP8XHbZsdLde2L3DCGXzSexxwDdXu4omJaDRZHyIJ+Hi/GxiL//WtLo5Fqakcxh5IOjzWMOLTvw9G1FLc=,iv:iUlSLwPcvU6/Exnc5stJMhpmySus2FCWjlQaoIyfz6w=,tag:hYCLxeUYnViEEq86aK50ug==,type:str]
+    lastmodified: "2021-06-11T17:07:50Z"
+    mac: ENC[AES256_GCM,data:ops7+LNE8nx7aPt6lF/4iRkl+8F3OiqKTcoj3AhjFopUOI9u0JUmlv8IjTmiZuz42buQfaF1D5AC6ocJJ6sbwBfJbyG7WMl8AWMz2GCLfgB6i9MpSLzBTfdCZq/5/VnnTU4S4/qbqsnBcXDkK5OYr7BZPNoL/C26+pq+ujmZDzQ=,iv:mCYZMpomg0rzF7z8zT7X0vBT9A7MAkU9GwHbUF21ZaY=,tag:7IZ1xj5FRj2Q0eoYqIMbrg==,type:str]
     pgp:
-        - created_at: "2021-05-28T11:19:49Z"
+        - created_at: "2021-06-11T17:07:49Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv/Q0cVnqJVfYFDIPmLu0CIxyc/Dkc+gZfyCipch1a38CK+
-            Ck+adR3cR8AgCv6GNRQ5fIeKLXdfJ5Ufr/qPoeSHLYHZ5AoRoPFlf/iSWJdYKz26
-            cvYrPQiRkFTbsvSOaD+Z7c4XZuR91lONj45JV5bAy2kJeQrDtGN24HtD7+IY3rd9
-            lEgVgs4YAyhtk2uKupS1YwyII6YGNAebO11MfYVDXzz2fdEuzJagloMRqB/WLj+E
-            tmYIXf92Uezw8Gf5LqlbZw5GQWMD4Ko+kBl3xCc394MUJOlcRSfWO0unHvnFJJil
-            ub/Y1lLz7JN0yFDQrN9YVmOP85sBD2JaFieqvlxqRwwBlMG7LoL75m10mZAIYHpe
-            oXIgL/49LEdkmuD6PL3EJtkYr2PPtdBlZvZIBrLQ3G0xb9x/Vd4W4DMckUBtloKc
-            a6iJJGgP3JntHCqFQ+iiiHlu4/DwKiGkF5wTxrzCvQ2CYyoCqLE2v+KFgaMdO9nb
-            1BgJrsb3cCWgQrenJdsX0l4BRkf+7baZKB5C01quYt0N+ihZz8aQfD/ScfxJ3Yp0
-            cvmV60PoAcTlP8tw0fjeuvv97v9ssC6KWT0+izDZkv4lTl0updQJQfRTyWkcYEGC
-            yWRbLSGKsW7qvNkzK4is
-            =V0y9
+            hQGMA71EESEn7N2iAQv9H5s/YVkJQB9dTZKCmu8q6VyrIh8tP6S4FVuFgGlAHjzu
+            O/zqvdcJ65xyxOyXWWQFvPXc5dhZyPlvkiS22dDZi4t8wiZEEiZwU5kqsAwZlt81
+            O5kIV+1BPHyFkLNovETz5YKt5ySUMc6vAxKIzNVX2TKWg611VTE3xXvQFJarl18V
+            nHwNjeiI8Eeq8qxneNO6vXnDnUn4Vs5SG0gU9LD+PItXdy4egIzDEMxok+U4RGzE
+            rcidcczuhFiAfTLnDGK8Xq6clhukKnMM06RsRW46Lm3/ylXnxvQVDhSrnzeAX83F
+            FDUie9baVj2f6XLGZwtfaC1SNL1LEfMQcI8tBXa5RYXrYf15NuOiBrLa+0sgeo15
+            WamCXoriCQUDdd0aOHQU3cbQEIFKdsg6d1UzbBIzSjxpngS95USkQsTnA0WiPzfc
+            fb9T82mGqKWp88pg/zhbvkFooMrc8ECkIXRngsJjGSaJN6ak6wxPOWI0YEov/BO1
+            pGyvsSW7K7H+f7f2v8qz0l4BqXFa8BHqR7imD4/6Fqk7NKBKQCqudPNiTeafZ9Ar
+            HqAsjDt5loQerBeVimyUr6wODQxTNlTcFY8cpVgF+Wq4mwOLyGRzyOb4AdNa0nsI
+            96qdE3xI5pt/P9pAB10s
+            =jw9P
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
