--- a/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
+++ b/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
@@ -15,6 +15,9 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    image:
+      repository: "quay.io/oauth2-proxy/oauth2-proxy"
+      tag: "v7.1.3-arm64"
     replicaCount: 1
     ingress:
       enabled: true
